2008-07-15  Mike Krüger <mkrueger@novell.com> 

	* GnomePlatform.cs: Fixed possible null reference exception.

2008-06-17  Lluis Sanchez Gual <lluis@novell.com> 

	* GnomePlatform.mdp: Fix runtime version.
	* GnomePlatform.cs: Gnome.Icon.LookupSync crashes in old gnome versions
	  if the file doesn't exist. Fixed this case in OnGetPixbufForFile.
	  Fixes bug #400297.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* GnomePlatform.addin.xml: Bump MD version.

2008-06-02  Lluis Sanchez Gual <lluis@novell.com> 

	* GnomePlatform.mdp: Some fixes in project files.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, GnomePlatform.mdp: New project model changes.

2008-05-08  Michael Hutchinson <mhutchinson@novell.com> 

	* GnomePlatform.cs: Moved the code here that uses the gedit file
	  association to check whether a file is text.

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* GnomePlatform.mdp: Remove unneeded reference.
	* GnomePlatform.cs: Track api changes.

2008-03-05  Michael Hutchinson <mhutchinson@novell.com> 

	* GnomePlatform.cs: Try to use the base implementation of GetMimeTypeForUri
	  to get a useful value, before falling back to GnomeVFS. Allows finding
	  mimetypes not registered on the system.

2008-02-14  Geoff Norton  <gnorton@novell.com>

	* GnomePlatform.cs: Expose the Name property.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* GnomePlatform.addin.xml: Update MD version.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* GnomePlatform.addin.xml: Updated add-in category and description.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* GnomePlatform.addin.xml, Makefile.am, GnomePlatform.mdp, GnomePlatform.cs:
	  Moved PlatformService to MD.Core.Gui. Removed old FileIconService class,
	  which is now implemented in PlatformService.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* GnomePlatform.addin.xml: Fix typo.
	* Makefile.am, GnomePlatform.mdp: Added MD project.
